<resources>
    <string name="app_name">NLCamping</string>
    <string name="id">ID:</string>
    <string name="add_review">Add review</string>
    <string name="reviews">Reviews</string>
    <string name="camping_in_netherlands">Camping in Netherlands</string>
    <string name="save">save</string>
    <string name="satisfaction_score_1_5">Satisfaction Score (1~5)</string>
    <string name="comment">Comment</string>
    <string name="add_park">Add Park</string>
    <string name="add_park_picture">Add park picture</string>
    <string name="camping_park_name">Camping park name</string>
    <string name="camping_park_address">Camping park address</string>
    <string name="address">Address</string>
    <string name="website_address">Website address</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="add_my_list">Add My List</string>
    <string name="delete">Delete</string>
    <string name="detail">Detail</string>
    <string name="edit">Edit</string>
    <string name="my_favorite_camping_parks">My Favorite Camping Parks</string>
    <string name="language_setting">Language Setting</string>
    <string name="language">Language</string>
    <string name="language_option">Language Option</string>
    <string name="tent_site">Tent Site</string>
    <string name="restaurant">Restaurant</string>
    <string name="bungalow">Bungalow</string>
    <string name="caravan_site">Caravan Site</string>
    <string name="swimming_pool">Swimming pool</string>
    <string name="wifi">Wifi</string>
    <string name="animal_friendly">Animal Friendly</string>
    <string name="search_option">Search Option</string>
    <string name="search_camping_park">Search Camping Park</string>
    <string name="parks_in_provinces">Parks in Provinces</string>
    <string name="overview">Overview</string>
</resources>
