<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ReviewEditAdd">


    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="601dp"
        android:layout_marginBottom="2dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/parkNameInReviewEdit"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/reviewImageView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/idEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="ID"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/scoreEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/satisfaction_score_1_5"
            android:inputType="number|textPersonName" />

        <EditText
            android:id="@+id/reviewCommentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/comment"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/reviewSaveButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="90dp"
            android:background="@drawable/custom_button"
            android:text="@string/save"
            android:onClick="whenSavePressed"
            android:textColor="#E91E63" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>