<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="15dp"
            android:text="@string/tent_site" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_tent" />

            <Switch
                android:id="@+id/switchTent"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="15dp"
            android:text="@string/caravan_site" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_caravan" />

            <Switch
                android:id="@+id/switchCaravan"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="15dp"
            android:text="@string/bungalow" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                app:srcCompat="@drawable/ic_bungalow" />

            <Switch
                android:id="@+id/switchBungalow"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="15dp"
            android:text="@string/restaurant" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_restaurant" />

            <Switch
                android:id="@+id/switchRestaurant"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="15dp"
            android:text="@string/swimming_pool" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_pool" />

            <Switch
                android:id="@+id/switchPool"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/wifi" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_wifi" />

            <Switch
                android:id="@+id/switchWifi"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="15dp"
            android:text="@string/animal_friendly" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_dog" />

            <Switch
                android:id="@+id/switchDog"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>