<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_background2"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/addMyListButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="200dp"
                android:text="@string/add_my_list" />

            <Button
                android:id="@+id/removeParkButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:background="#00ffffff"
                android:drawableTop="@drawable/ic_trash"
                android:text="@string/delete" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="3dp"
                android:paddingBottom="7dp">


                <TextView
                    android:id="@+id/parkName"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:paddingTop="5dp"
                    android:text="TextView"
                    android:paddingLeft="7dp"
                    android:textAlignment="gravity"
                    android:textSize="20sp" />

                <RatingBar
                    android:id="@+id/parkRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5" />

            </LinearLayout>

            <Button
                android:id="@+id/parkDetailbutton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_loupe"
                android:text="@string/detail" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>